--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
 build:
   stage: build
   script:
-    - npm run tslint
+    - npm run lint
     - npm run compile
     - npm run vscode:prepublish
     - vsce package
