Add menu to open Dashboard from cluster
Signed-off-by: Fred Bricon <fbricon@gmail.com>

--- a/package.json
+++ b/package.json
@@ -36,7 +36,14 @@
 			"command": "rhoas.open.RHOSAKDashboard",
 			"category": "Red Hat",
 			"title": "Open Red Hat OpenShift Streams for Apache Kafka Dashboard"
-		}]
+		}],
+		"view/item/context": [
+			{
+				"command": "rhoas.open.RHOSAKDashboard",
+				"when": "view == kafkaExplorer && viewItem == cluster && !listMultiSelection",
+				"group": "1_kafka"
+			}
+		]
 	},
 	"extensionDependencies": [
 		"jeppeandersen.vscode-kafka",
