--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "Red Hat",
 	"displayName": "Red Hat OpenShift Application Services",
 	"description": "Contributes `Red Hat OpenShift Streams For Apache Kafka` clusters to `Tools for Apache Kafka`",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -85,23 +85,24 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.52.0",
 		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.2.2",
-		"@types/node": "^12.11.7",
-		"eslint": "^7.19.0",
+		"@types/mocha": "^9.1.1",
+		"@types/node": "^14.0.0",
+		"@types/vscode": "^1.52.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
+		"eslint": "^7.19.0",
 		"glob": "^7.1.6",
-		"mocha": "^8.2.2",
+		"mocha": "^10.0.0",
+		"ts-loader": "^8.0.14",
 		"typescript": "^4.2.3",
 		"vscode-test": "^1.5.0",
-		"ts-loader": "^8.0.14",
 		"webpack": "^5.19.0",
 		"webpack-cli": "^4.4.0"
 	},
 	"dependencies": {
 		"@redhat-developer/vscode-redhat-telemetry": "0.4.2",
-		"@rhoas/kafka-management-sdk": "0.12.3"
+		"@rhoas/kafka-management-sdk": "0.34.1",
+		"node-cache": "^5.1.2"
 	}
 }
