--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "Red Hat",
 	"displayName": "Red Hat OpenShift Application Services",
 	"description": "Contributes `Red Hat OpenShift Streams For Apache Kafka` clusters to `Tools for Apache Kafka`",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -102,7 +102,6 @@
 	},
 	"dependencies": {
 		"@redhat-developer/vscode-redhat-telemetry": "0.4.2",
-		"@rhoas/kafka-management-sdk": "0.34.1",
-		"node-cache": "^5.1.2"
+		"@rhoas/kafka-management-sdk": "0.38.0"
 	}
 }
